# portfolio

./: .coderabbit.yaml  .editorconfig  .env  .env.development  .env.production  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  CHROME_HEADLESS_CLS_BUG.md  CLAUDE.md  CLS_HYPOTHESIS_TESTING_REPORT.md  CLS_PRODUCTION_VS_DEV_FINDING.md  CLS_TOOLS_SUMMARY.md  Cargo.toml  LIGHTHOUSE_VS_CYPRESS_CLS_DISCREPANCY.md  REACT_HYDRATION_INVESTIGATION.md  REACT_INVESTIGATION_SUMMARY.md  README.md  ROADMAP.md  cypress.config.ts  cypress.d.ts  eslint.config.mts  flipt.yaml  index.html  next.config.mjs  next.config.ts  oxlintrc.json  package-lock.json  package.json  prettier.config.mjs  stylelint.config.js  stylelint.config.mjs  tailwind.config.ts  tsconfig.app.json  tsconfig.config.json  tsconfig.json  tsconfig.node.json  vite.config.mts  vitest.config.mts  (+2 more)
.github/: BRANCH_PROTECTION.md  CLAUDE_ASSISTANT.md  ISSUE_CLAUDE_WORKFLOW.md
.github/scripts/: claude-integration.js  package.json
.github/workflows/: ci.yml  claude-assistant.yml  claude-code.yml  toggle-feature-flag.yml
.serena/: project.yml
docs/: CLOUDFLARE_DEPLOYMENT.md  CLS_DIAGNOSTICS.md  FEATURE_FLAGS.md  GRAPHITE_SETUP.md  test-audit-phase1.md
docs/issues/: feature-flags-admin-dashboard.md
scripts/: README.md  flags-cli.ts  measure-cls.mjs  vite-plugin-feature-flags.ts
src/: main.rs  root.tsx  routes.tsx  vite-env.d.ts
src/api/: fetch.rs
src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
src/components/: ContactEmailForm.tsx  body.rs  cloudinary_image.rs  contact_form.rs  error_message.rs  input_toggle.rs  mailto_link.rs  mod.rs  navigation.rs  social_media_icons.rs  success_message.rs  util.rs  web_project.rs
src/constants/: constants.ts  featureFlags.ts  navigationData.tsx
src/hooks/: useFeatureFlags.ts  useIsMobile.ts  useOnPropChange.ts  useWindowResize.ts
src/pages/: CodePage.tsx  ContactPage.tsx  HomePage.tsx  NotFoundPage.tsx  OpenSourceProjectsPage.tsx  ResumePage.tsx  WebProjectsPage.tsx  contact.rs  home.rs  loading.tsx  not_found.rs  web.rs
(+198 files in other folders)
